--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongo": "^0.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
   }
 }
